--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -4,17 +4,17 @@
   <header class="sheet-header">
     <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100"/>
     <div class="header-fields">
-      <h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="Name"/></h1>
+      <h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="Nome"/></h1>
       {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
       use both the "grid" and "grid-Ncol" class where "N" can be any number
       from 1 to 12 and will create that number of columns.  --}}
-      <div class="resources grid grid-3col">
+      <div class="resources grid grid-2col">
 
         {{!-- "flex-group-center" is also defined in the _grid.scss file
         and it will add a small amount of padding, a border, and will
         center all of its child elements content and text. --}}
         <div class="resource flex-group-center">
-          <label for="system.vida.value" class="resource-label">Health</label>
+          <label for="system.vida.value" class="resource-label">{{localize "TRESDETALPHA.Pontos.vida.label"}}</label>
           <div class="resource-content flexrow flex-center flex-between">
             <input type="text" name="system.vida.value" value="{{system.vida.value}}" data-dtype="Number"/>
             <span> / </span>
@@ -23,23 +23,13 @@
         </div>
 
         <div class="resource flex-group-center">
-          <label for="system.magia.value" class="resource-label">Power</label>
+          <label for="system.magia.value" class="resource-label">{{localize "TRESDETALPHA.Pontos.magia.label"}}</label>
           <div class="resource-content flexrow flex-center flex-between">
             <input type="text" name="system.magia.value" value="{{system.magia.value}}" data-dtype="Number"/>
             <span> / </span>
             <input type="text" name="system.magia.max" value="{{system.magia.max}}" data-dtype="Number"/>
           </div>
         </div>
-
-        <div class="resource flex-group-center">
-          <label for="system.cr" class="resource-label">CR / XP</label>
-          <div class="resource-content flexrow flex-center flex-between">
-            <input type="text" name="system.cr" value="{{system.cr}}" data-dtype="Number"/>
-            <span> / </span>
-            <input type="text" disabled="true" name="system.xp" value="{{system.xp}}" data-dtype="Number"/>
-          </div>
-        </div>
-
       </div>
     </div>
   </header>
@@ -47,23 +37,61 @@
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     {{!-- Default tab is specified in actor-sheet.mjs --}}
-    <a class="item" data-tab="description">Description</a>
-    <a class="item" data-tab="items">Items</a>
-    <a class="item" data-tab="effects">Effects</a>
+    <a class="item" data-tab="features">{{localize "TRESDETALPHA.Aba.caracteristica"}}</a>
+    <a class="item" data-tab="description">{{localize "TRESDETALPHA.Aba.descricao"}}</a>
+    <a class="item" data-tab="items">{{localize "TRESDETALPHA.Aba.item"}}</a>
+    <a class="item" data-tab="spells">{{localize "TRESDETALPHA.Aba.magia"}}</a>
+    <a class="item" data-tab="effects">{{localize "TRESDETALPHA.Aba.efeito"}}</a>
   </nav>
 
   {{!-- Sheet Body --}}
   <section class="sheet-body">
 
+    {{!-- Owned Features Tab --}}
+    <div class="tab features" data-group="primary" data-tab="features">
+      <section class="grid grid-2col">
+        <aside class="sidebar">
+
+          {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
+          use both the "grid" and "grid-Ncol" class where "N" can be any number
+          from 1 to 12 and will create that number of columns. --}}
+          <div class="abilities flexcol">
+            {{#each system.abilities as |ability key|}}
+            <div class="ability flexrow flex-group-center">
+              <label for="system.abilities.{{key}}.value" class="resource-label rollable flexlarge align-left"
+                data-roll="d6+@abilities.{{key}}.value" data-label="{{ability.label}}">{{ability.label}}</label>
+              <input type="text" name="system.abilities.{{key}}.value" value="{{ability.value}}" data-dtype="Number" />
+            </div>
+            {{/each}}
+          </div>
+        </aside>
+
+        {{!-- For the main features list, span the right two columns --}}
+        <section class="main grid-span-2">
+          {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in
+          module/helpers/templates.mjs --}}
+          {{> "systems/tresdetalpha/templates/actor/parts/actor-features.html"}}
+          {{> "systems/tresdetalpha/templates/actor/parts/actor-vantagens.html"}}
+        </section>
+
+      </section>
+    </div>
+
     {{!-- Biography Tab --}}
     <div class="tab biography" data-group="primary" data-tab="description">
-      {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to the rollData property. --}}
+      {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to
+      the rollData property. --}}
       {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}
     </div>
 
     {{!-- Owned Items Tab --}}
     <div class="tab items" data-group="primary" data-tab="items">
-       {{> "systems/tresdetalpha/templates/actor/parts/actor-items.html"}}
+      {{> "systems/tresdetalpha/templates/actor/parts/actor-items.html"}}
+    </div>
+
+    {{!-- Owned Spells Tab --}}
+    <div class="tab spells" data-group="primary" data-tab="spells">
+      {{> "systems/tresdetalpha/templates/actor/parts/actor-spells.html"}}
     </div>
 
     {{!-- Active Effects Tab --}}
