--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -2,12 +2,12 @@
 
   {{!-- Sheet Header --}}
   <header class="sheet-header">
-    <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100"/>
+    <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100" />
     <div class="header-fields">
-      <h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="Nome"/></h1>
+      <h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="Nome" /></h1>
       {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
       use both the "grid" and "grid-Ncol" class where "N" can be any number
-      from 1 to 12 and will create that number of columns.  --}}
+      from 1 to 12 and will create that number of columns. --}}
       <div class="resources grid grid-2col">
 
         {{!-- "flex-group-center" is also defined in the _grid.scss file
@@ -16,18 +16,18 @@
         <div class="resource flex-group-center">
           <label for="system.vida.value" class="resource-label">{{localize "TRESDETALPHA.Pontos.vida.label"}}</label>
           <div class="resource-content flexrow flex-center flex-between">
-            <input type="text" name="system.vida.value" value="{{system.vida.value}}" data-dtype="Number"/>
+            <input type="text" name="system.vida.value" value="{{system.vida.value}}" data-dtype="Number" />
             <span> / </span>
-            <input type="text" name="system.vida.max" value="{{system.vida.max}}" data-dtype="Number"/>
+            <input type="text" name="system.vida.max" value="{{system.vida.max}}" data-dtype="Number" />
           </div>
         </div>
 
         <div class="resource flex-group-center">
           <label for="system.magia.value" class="resource-label">{{localize "TRESDETALPHA.Pontos.magia.label"}}</label>
           <div class="resource-content flexrow flex-center flex-between">
-            <input type="text" name="system.magia.value" value="{{system.magia.value}}" data-dtype="Number"/>
+            <input type="text" name="system.magia.value" value="{{system.magia.value}}" data-dtype="Number" />
             <span> / </span>
-            <input type="text" name="system.magia.max" value="{{system.magia.max}}" data-dtype="Number"/>
+            <input type="text" name="system.magia.max" value="{{system.magia.max}}" data-dtype="Number" />
           </div>
         </div>
       </div>
@@ -65,6 +65,44 @@
             {{/each}}
           </div>
         </aside>
+        <div class="abilities flexcol">
+          <strong class="resource-label align-center">
+            {{localize "TRESDETALPHA.Tipo.dano.label"}}
+          </strong>
+          <div class="ability flexrow flex-group-center">
+            <label class="resource-label rollable align-left">
+              {{localize "TRESDETALPHA.Caracteristicas.forca.label"}}
+            </label>
+            <input type="text" style="width:150px" name="tipoDanoForca" value="" data-dtype="String" />
+          </div>
+          <div class="ability flexrow flex-group-center">
+            <label class="resource-label rollable align-left">
+              {{localize "TRESDETALPHA.Caracteristicas.poderDeFogo.label"}}
+            </label>
+            <input type="text" style="width:150px" name="tipoDanoPoderDeFogo" value="" data-dtype="String" />
+          </div>
+          <div>
+            <label class="resource-label rollable align-left">
+              {{localize "TRESDETALPHA.Forca.defesa.label"}} ({{localize "TRESDETALPHA.Forca.defesa.abreviacao"}})&nbsp;
+            </label>
+            <input type="text" style="width:145px" name="forcaDefesa" value="" data-dtype="Number" />
+          </div>
+          <div>
+            <strong>
+              {{localize "TRESDETALPHA.Forca.ataque.label"}} ({{localize "TRESDETALPHA.Forca.ataque.abreviacao"}})&nbsp;
+            </strong>
+            <label class="resource-label rollable align-left">
+              {{localize "TRESDETALPHA.Caracteristicas.forca.abreviacao"}}:&nbsp;
+            </label>
+            <input type="text" style="width:40px" name="forcaAtaqueForca" value="" data-dtype="Number" />
+            <span>&nbsp;</span>
+            <label class="resource-label rollable align-left">
+              {{localize "TRESDETALPHA.Caracteristicas.poderDeFogo.abreviacao"}}:&nbsp;
+            </label>
+            <input type="text" style="width:40px" name="forcaAtaquePoderDeFogo" value="" data-dtype="Number" />
+          </div>
+        </div>
+        
 
         {{!-- For the main features list, span the right two columns --}}
         <section class="main grid-span-2">
@@ -73,34 +111,34 @@
           {{> "systems/tresdetalpha/templates/actor/parts/actor-vantagens.html"}}
           {{> "systems/tresdetalpha/templates/actor/parts/actor-desvantagens.html"}}
           {{> "systems/tresdetalpha/templates/actor/parts/actor-vantagemunica.html"}}
+          {{> "systems/tresdetalpha/templates/actor/parts/actor-pericias.html"}}
         </section>
-        </section>
-
       </section>
-    </div>
 
-    {{!-- Biography Tab --}}
-    <div class="tab biography" data-group="primary" data-tab="description">
-      {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to
-      the rollData property. --}}
-      {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}
-    </div>
+  </section>
+  </div>
 
-    {{!-- Owned Items Tab --}}
-    <div class="tab items" data-group="primary" data-tab="items">
-      {{> "systems/tresdetalpha/templates/actor/parts/actor-items.html"}}
-    </div>
+  {{!-- Biography Tab --}}
+  <div class="tab biography" data-group="primary" data-tab="description">
+    {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to
+    the rollData property. --}}
+    {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}
+  </div>
 
-    {{!-- Owned Spells Tab --}}
-    <div class="tab spells" data-group="primary" data-tab="spells">
-      {{> "systems/tresdetalpha/templates/actor/parts/actor-spells.html"}}
-    </div>
+  {{!-- Owned Items Tab --}}
+  <div class="tab items" data-group="primary" data-tab="items">
+    {{> "systems/tresdetalpha/templates/actor/parts/actor-items.html"}}
+  </div>
 
-    {{!-- Active Effects Tab --}}
-    <div class="tab effects flexcol" data-group="primary" data-tab="effects">
-      {{> "systems/tresdetalpha/templates/actor/parts/actor-effects.html"}}
-    </div>
+  {{!-- Owned Spells Tab --}}
+  <div class="tab spells" data-group="primary" data-tab="spells">
+    {{> "systems/tresdetalpha/templates/actor/parts/actor-spells.html"}}
+  </div>
+
+  {{!-- Active Effects Tab --}}
+  <div class="tab effects flexcol" data-group="primary" data-tab="effects">
+    {{> "systems/tresdetalpha/templates/actor/parts/actor-effects.html"}}
+  </div>
 
   </section>
 </form>
-
