--- a/templates/actor/actor-personagem-sheet.html
+++ b/templates/actor/actor-personagem-sheet.html
@@ -32,9 +32,11 @@
         </div>
 
         <div class="resource flex-group-center">
-          <label for="system.attributes.level.value" class="resource-label">{{localize "TRESDETALPHA.Pontos.experiencia.label"}}</label>
+          <label for="system.attributes.level.value" class="resource-label">{{localize
+            "TRESDETALPHA.Pontos.experiencia.label"}}</label>
           <div class="resource-content flexrow flex-center flex-between">
-            <input type="text" name="system.experiencia.value" value="{{system.experiencia.value}}" data-dtype="Number" />
+            <input type="text" name="system.experiencia.value" value="{{system.experiencia.value}}"
+              data-dtype="Number" />
           </div>
         </div>
 
@@ -73,40 +75,80 @@
             {{/each}}
           </div>
         </aside>
-
-        {{!-- For the main features list, span the right two columns --}}
-        <section class="main grid-span-2">
-          {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in
-          module/helpers/templates.mjs --}}
-          {{> "systems/tresdetalpha/templates/actor/parts/actor-vantagens.html"}}
-          {{> "systems/tresdetalpha/templates/actor/parts/actor-desvantagens.html"}}
-          {{> "systems/tresdetalpha/templates/actor/parts/actor-vantagemunica.html"}}
-        </section>
-
+        <div class="abilities flexcol">
+          <strong class="resource-label align-center">
+            {{localize "TRESDETALPHA.Tipo.dano.label"}}
+          </strong>
+          <div class="ability flexrow flex-group-center">
+            <label class="resource-label rollable align-left">
+              {{localize "TRESDETALPHA.Caracteristicas.forca.label"}}
+            </label>
+            <input type="text" style="width:150px" name="tipoDanoForca" value="" data-dtype="String" />
+          </div>
+          <div class="ability flexrow flex-group-center">
+            <label class="resource-label rollable align-left">
+              {{localize "TRESDETALPHA.Caracteristicas.poderDeFogo.label"}}
+            </label>
+            <input type="text" style="width:150px" name="tipoDanoPoderDeFogo" value="" data-dtype="String" />
+          </div>
+          <div>
+            <label class="resource-label rollable align-left">
+              {{localize "TRESDETALPHA.Forca.defesa.label"}} ({{localize "TRESDETALPHA.Forca.defesa.abreviacao"}})&nbsp;
+            </label>
+            <input type="text" style="width:145px" name="forcaDefesa" value="" data-dtype="Number" />
+          </div>
+          <div>
+            <strong>
+              {{localize "TRESDETALPHA.Forca.ataque.label"}} ({{localize "TRESDETALPHA.Forca.ataque.abreviacao"}})&nbsp;
+            </strong>
+            <label class="resource-label rollable align-left">
+              {{localize "TRESDETALPHA.Caracteristicas.forca.abreviacao"}}:&nbsp;
+            </label>
+            <input type="text" style="width:40px" name="forcaAtaqueForca" value="" data-dtype="Number" />
+            <span>&nbsp;</span>
+            <label class="resource-label rollable align-left">
+              {{localize "TRESDETALPHA.Caracteristicas.poderDeFogo.abreviacao"}}:&nbsp;
+            </label>
+            <input type="text" style="width:40px" name="forcaAtaquePoderDeFogo" value="" data-dtype="Number" />
+          </div>
+        </div>
       </section>
-    </div>
 
-    {{!-- Biography Tab --}}
-    <div class="tab biography" data-group="primary" data-tab="description">
-      {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to
-      the rollData property. --}}
-      {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}
-    </div>
+      <section class="grid grid-col"></section>
+      {{!-- For the main features list, span the right two columns --}}
+      <section class="main grid-span-2">
+        {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in
+        module/helpers/templates.mjs --}}
+        {{> "systems/tresdetalpha/templates/actor/parts/actor-vantagens.html"}}
+        {{> "systems/tresdetalpha/templates/actor/parts/actor-desvantagens.html"}}
+        {{> "systems/tresdetalpha/templates/actor/parts/actor-vantagemunica.html"}}
+        {{> "systems/tresdetalpha/templates/actor/parts/actor-pericias.html"}}
+      </section>
 
-    {{!-- Owned Items Tab --}}
-    <div class="tab items" data-group="primary" data-tab="items">
-      {{> "systems/tresdetalpha/templates/actor/parts/actor-items.html"}}
-    </div>
+  </section>
+  </div>
 
-    {{!-- Owned Spells Tab --}}
-    <div class="tab spells" data-group="primary" data-tab="spells">
-      {{> "systems/tresdetalpha/templates/actor/parts/actor-spells.html"}}
-    </div>
+  {{!-- Biography Tab --}}
+  <div class="tab biography" data-group="primary" data-tab="description">
+    {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to
+    the rollData property. --}}
+    {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}
+  </div>
 
-    {{!-- Active Effects Tab --}}
-    <div class="tab effects flexcol" data-group="primary" data-tab="effects">
-      {{> "systems/tresdetalpha/templates/actor/parts/actor-effects.html"}}
-    </div>
+  {{!-- Owned Items Tab --}}
+  <div class="tab items" data-group="primary" data-tab="items">
+    {{> "systems/tresdetalpha/templates/actor/parts/actor-items.html"}}
+  </div>
+
+  {{!-- Owned Spells Tab --}}
+  <div class="tab spells" data-group="primary" data-tab="spells">
+    {{> "systems/tresdetalpha/templates/actor/parts/actor-spells.html"}}
+  </div>
+
+  {{!-- Active Effects Tab --}}
+  <div class="tab effects flexcol" data-group="primary" data-tab="effects">
+    {{> "systems/tresdetalpha/templates/actor/parts/actor-effects.html"}}
+  </div>
 
   </section>
 </form>
