--- a/templates/actor/actor-personagem-sheet.html
+++ b/templates/actor/actor-personagem-sheet.html
@@ -107,51 +107,59 @@
             <label for="system.attributes.forcaDeAtaque.forca.value" class="resource-label rollable align-left">
               {{localize "TRESDETALPHA.Caracteristicas.forca.abreviacao"}}:&nbsp;
             </label>
-            <input type="text" style="width:40px; text-align: center;" name="system.attributes.forcaDeAtaque.forca.value"
-              value="{{system.attributes.forcaDeAtaque.forca.value}}" data-dtype="Number" />
+            <input type="text" style="width:40px; text-align: center;"
+              name="system.attributes.forcaDeAtaque.forca.value" value="{{system.attributes.forcaDeAtaque.forca.value}}"
+              data-dtype="Number" />
             <span>&nbsp;</span>
             <label for="system.attributes.forcaDeAtaque.poderDeFogo.value" class="resource-label rollable align-left">
               {{localize "TRESDETALPHA.Caracteristicas.poderDeFogo.abreviacao"}}:&nbsp;
             </label>
-            <input type="text" style="width:40px; text-align: center;" name="system.attributes.forcaDeAtaque.poderDeFogo.value"
+            <input type="text" style="width:40px; text-align: center;"
+              name="system.attributes.forcaDeAtaque.poderDeFogo.value"
               value="{{system.attributes.forcaDeAtaque.poderDeFogo.value}}" data-dtype="Number" />
           </div>
         </div>
 
-      {{!-- For the main features list, span the right two columns --}}
-      <section class="main grid-span-2">
-        {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in
-        module/helpers/templates.mjs --}}
-        {{> "systems/tresdetalpha/templates/actor/parts/actor-vantagens.html"}}
-        {{> "systems/tresdetalpha/templates/actor/parts/actor-desvantagens.html"}}
-        {{> "systems/tresdetalpha/templates/actor/parts/actor-vantagemunica.html"}}
-        {{> "systems/tresdetalpha/templates/actor/parts/actor-pericias.html"}}
+        {{!-- For the main features list, span the right two columns --}}
+        <section class="main grid-span-2">
+          {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in
+          module/helpers/templates.mjs --}}
+          <div class="resources grid grid-2col">
+            <div class="resource flex-group-center">
+              {{> "systems/tresdetalpha/templates/actor/parts/actor-vantagemunica.html"}}
+              {{> "systems/tresdetalpha/templates/actor/parts/actor-vantagens.html"}}
+            </div>
+            <div class="resource flex-group-center">
+              {{> "systems/tresdetalpha/templates/actor/parts/actor-desvantagens.html"}}
+              {{> "systems/tresdetalpha/templates/actor/parts/actor-pericias.html"}}
+            </div>
+          </div>
+        </section>
+
       </section>
+    </div>
 
-  </section>
-  </div>
+    {{!-- Biography Tab --}}
+    <div class="tab biography" data-group="primary" data-tab="description">
+      {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to
+      the rollData property. --}}
+      {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}
+    </div>
 
-  {{!-- Biography Tab --}}
-  <div class="tab biography" data-group="primary" data-tab="description">
-    {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to
-    the rollData property. --}}
-    {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}
-  </div>
+    {{!-- Owned Items Tab --}}
+    <div class="tab items" data-group="primary" data-tab="items">
+      {{> "systems/tresdetalpha/templates/actor/parts/actor-items.html"}}
+    </div>
 
-  {{!-- Owned Items Tab --}}
-  <div class="tab items" data-group="primary" data-tab="items">
-    {{> "systems/tresdetalpha/templates/actor/parts/actor-items.html"}}
-  </div>
+    {{!-- Owned Spells Tab --}}
+    <div class="tab spells" data-group="primary" data-tab="spells">
+      {{> "systems/tresdetalpha/templates/actor/parts/actor-spells.html"}}
+    </div>
 
-  {{!-- Owned Spells Tab --}}
-  <div class="tab spells" data-group="primary" data-tab="spells">
-    {{> "systems/tresdetalpha/templates/actor/parts/actor-spells.html"}}
-  </div>
-
-  {{!-- Active Effects Tab --}}
-  <div class="tab effects flexcol" data-group="primary" data-tab="effects">
-    {{> "systems/tresdetalpha/templates/actor/parts/actor-effects.html"}}
-  </div>
+    {{!-- Active Effects Tab --}}
+    <div class="tab effects flexcol" data-group="primary" data-tab="effects">
+      {{> "systems/tresdetalpha/templates/actor/parts/actor-effects.html"}}
+    </div>
 
   </section>
 </form>
