--- a/templates/item/item-pericia-sheet.html
+++ b/templates/item/item-pericia-sheet.html
@@ -6,10 +6,10 @@
       <div class="grid grid-3col">
         <div class="resource flex-group-center">
           <label class="resource-label">{{localize "TRESDETALPHA.Custo"}}</label>
-          <input type="text" name="system.custo" value="{{system.custo}}" data-dtype="Number"/>
+          <input type="text" name="system.custo" value="{{system.custo}}" data-dtype="Number" disabled="disabled"/>
         </div>
         <div class="item-subtitle" style="text-align: center;">
-          <h4 class="item-type">{{localize "TYPES.Item.pericia"}}</h4>
+          <h4 class="item-type">{{localize "TYPES.Item.vantagem"}}</h4>
         </div>
       </div>
     </div>
