--- a/templates/item/item-vantagemUnica-sheet.html
+++ b/templates/item/item-vantagemUnica-sheet.html
@@ -2,7 +2,7 @@
   <header class="sheet-header">
     <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
     <div class="header-fields">
-      <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name"/></h1>
+      <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder={{localize "TRESDETALPHA.Nome"}}/></h1>
       <div class="grid grid-2col">
         <div class="resource flex-group-center">
           <label class="resource-label">{{localize "TRESDETALPHA.Custo"}}</label>
